--- a/views/index.html
+++ b/views/index.html
@@ -4,14 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Document</title>
 </head>
 
 <body>
-  <header>
-    <img src="" alt="">
-    <input type="text">
-    <p>Comprá en cuotas y sin tarjeta de crédito</p>
+  <header class="header">
+    <figure>
+      <img src="/images/logo-mercado-liebre.svg" alt="mercado liebre">
+    </figure>
+    <form action="">
+      <input type="text">
+      <button><i class="fas fa-search"></i></button>
+    </form>
+    <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
     <nav>
       <ul>
         <li><a href="#">Ofertas</a></li>
@@ -20,35 +28,46 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
       <ul>
-        <li><a href="#">Creá tu cuenta</a></li>
-        <li><a href="#">Ingresá</a></li>
-        <li><a href="#">Mis Compras</a></li>
+        <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+        <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+        <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
       </ul>
+      <div class="burger-menu">
+        <i class="fas fa-bars icon-burger"></i>
+      </div>
     </nav>
   </header>
   <main>
     <section>
       <h3>Basado en tu última visita</h3>
       <article>
-        <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+        <figure>
+          <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+        </figure>
         <p>$6.7070</p>
         <p>40% OFF</p>
         <p>Cafetera Moulinex</p>
       </article>
       <article>
-        <img src="/images/img-macbook-pro-2019.jpg" alt="">
+        <figure>
+          <img src="/images/img-macbook-pro-2019.jpg" alt="">
+        </figure>
         <p>$230.000</p>
         <p>20% off</p>
         <p>MacBook Pro 2019</p>
       </article>
       <article>
-        <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+        <figure>
+          <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+        </figure>
         <p>$70.500</p>
         <p>10% OFF</p>
         <p>Samsung Galaxy S10</p>
       </article>
       <article>
-        <img src="/images/img-tv-samsung-smart.jpg" alt="">
+        <figure>
+          <img src="/images/img-tv-samsung-smart.jpg" alt="">
+        </figure>
         <p>$23.200</p>
         <p>5% off</p>
         <p>SmartTv Samsung 43"</p>
@@ -57,26 +76,34 @@
     <section>
       <h3>Ofertas</h3>
       <article>
-        <img src="/images/img-cafetera-moulinex.jpg" alt="">
+        <figure>
+          <img src="/images/img-cafetera-moulinex.jpg" alt="">
+        </figure>
         <p>$6.770</p>
         <p>40% off</p>
         <p>Cafetera Moulinex</p>
       </article>
       <article>
-        <img src="/images/img-macbook-pro-2019.jpg" alt="">
+        <figure>
+          <img src="/images/img-macbook-pro-2019.jpg" alt="">
+        </figure>
         <p>$230.000</p>
         <p>20% off</p>
         <p>MacBook Pro 2019</p>
       </article>
       <article>
-        <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+        <figure>
+          <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
+        </figure>
         <p>$70.500</p>
         <p>10% off</p>
         <p>Samsung Galaxy S10</p>
       </article>
 
       <article>
-        <img src="/images/img-tv-samsung-smart.jpg" alt="">
+        <figure>
+          <img src="/images/img-tv-samsung-smart.jpg" alt="">
+        </figure>
         <p>$23.200</p>
         <p>5% off</p>
         <p>SmartTv Samsung 43"</p>
@@ -84,24 +111,27 @@
 
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <section>
+      <i class="fas fa-credit-card"></i>
       <h3>Pagá con tarjeta o en efectivo</h3>
       <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
         puntos de pago. ¡Y siempre es seguro!</p>
     </section>
     <section>
+      <i class="fas fa-gift"></i>
       <h3>Envío gratis desde $ 2.500</h3>
       <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
         productos. Es un beneficio de Mercado Puntos.</p>
     </section>
     <section>
+      <i class="fas fa-user-shield"></i>
       <h3>Seguridad, de principio a fin</h3>
       <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
         porque estás siempre protegid@.</p>
     </section>
-    <section>
-      <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+    <section class="copyright">
+      <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </section>
   </footer>
 </body>
