--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,13 @@
     </form>
     <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
     <nav>
-      <ul>
+      <ul class="site">
         <li><a href="#">Ofertas</a></li>
         <li><a href="#">Tiendas Oficiales</a></li>
         <li><a href="#">Vender</a></li>
         <li><a href="#">Ayuda</a></li>
       </ul>
-      <ul>
+      <ul class="login">
         <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
         <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
         <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
@@ -35,78 +35,105 @@
       <div class="burger-menu">
         <i class="fas fa-bars icon-burger"></i>
       </div>
+      <div class="headder__background">
+
+      </div>
     </nav>
   </header>
   <main>
     <section>
-      <h3>Basado en tu última visita</h3>
+      <h3 class="seccion__nombre">Basado en tu última visita</h3>
       <article>
         <figure>
           <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
         </figure>
-        <p>$6.7070</p>
-        <p>40% OFF</p>
-        <p>Cafetera Moulinex</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$6.7070</p>
+          <p class="producto__descuento">40% OFF</p>
+          <p class="producto__nombre">Cafetera Moulinex</p>
+        </div>
       </article>
       <article>
         <figure>
           <img src="/images/img-macbook-pro-2019.jpg" alt="">
         </figure>
-        <p>$230.000</p>
-        <p>20% off</p>
-        <p>MacBook Pro 2019</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$230.000</p>
+          <p class="producto__descuento">20% off</p>
+          <p class="producto__nombre">MacBook Pro 2019</p>
+        </div>
       </article>
       <article>
         <figure>
           <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
         </figure>
-        <p>$70.500</p>
-        <p>10% OFF</p>
-        <p>Samsung Galaxy S10</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$70.500</p>
+          <p class="producto__descuento">10% OFF</p>
+          <p class="producto__nombre">Samsung Galaxy S10</p>
+        </div>
       </article>
       <article>
         <figure>
           <img src="/images/img-tv-samsung-smart.jpg" alt="">
         </figure>
-        <p>$23.200</p>
-        <p>5% off</p>
-        <p>SmartTv Samsung 43"</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$23.200</p>
+          <p class="producto__descuento">5% off</p>
+          <p class="producto__nombre">SmartTv Samsung 43"</p>
+        </div>
       </article>
     </section>
     <section>
-      <h3>Ofertas</h3>
+      <h3 class="seccion__nombre">Ofertas</h3>
       <article>
         <figure>
           <img src="/images/img-cafetera-moulinex.jpg" alt="">
         </figure>
-        <p>$6.770</p>
-        <p>40% off</p>
-        <p>Cafetera Moulinex</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$6.770</p>
+          <p class="producto__descuento">40% off</p>
+          <p class="producto__nombre">Cafetera Moulinex</p>
+        </div>
       </article>
       <article>
         <figure>
           <img src="/images/img-macbook-pro-2019.jpg" alt="">
         </figure>
-        <p>$230.000</p>
-        <p>20% off</p>
-        <p>MacBook Pro 2019</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$230.000</p>
+          <p class="producto__descuento">20% off</p>
+          <p class="producto__nombre">MacBook Pro 2019</p>
+        </div>
       </article>
       <article>
         <figure>
           <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
         </figure>
-        <p>$70.500</p>
-        <p>10% off</p>
-        <p>Samsung Galaxy S10</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$70.500</p>
+          <p class="producto__descuento">10% off</p>
+          <p class="producto__nombre">Samsung Galaxy S10</p>
+        </div>
       </article>
 
       <article>
         <figure>
           <img src="/images/img-tv-samsung-smart.jpg" alt="">
         </figure>
-        <p>$23.200</p>
-        <p>5% off</p>
-        <p>SmartTv Samsung 43"</p>
+        <div class="producto__descripcion">
+          <i class="fas fa-truck"></i>
+          <p class="producto__precio">$23.200</p>
+          <p class="producto__descuento">5% off</p>
+          <p class="producto__nombre">SmartTv Samsung 43"</p>
+        </div>
       </article>
 
     </section>
