--- a/views/index.html
+++ b/views/index.html
@@ -12,126 +12,149 @@
 
 <body>
   <header class="header">
-    <figure>
-      <img src="/images/logo-mercado-liebre.svg" alt="mercado liebre">
-    </figure>
-    <form action="">
-      <input type="text">
-      <button><i class="fas fa-search"></i></button>
-    </form>
-    <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-    <nav>
-      <ul class="site">
-        <li><a href="#">Ofertas</a></li>
-        <li><a href="#">Tiendas Oficiales</a></li>
-        <li><a href="#">Vender</a></li>
-        <li><a href="#">Ayuda</a></li>
-      </ul>
-      <ul class="login">
-        <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-        <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-        <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
-      </ul>
-      <div class="burger-menu">
-        <i class="fas fa-bars icon-burger"></i>
+    <div class="container">
+      <div class="container-head">
+        <figure class="icono">
+          <img src="/images/logo-mercado-liebre.svg" alt="mercado liebre">
+        </figure>
+        <form class="form-buscar" action="">
+          <input type="text">
+          <button><i class="fas fa-search"></i></button>
+        </form>
+        <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
       </div>
-      <div class="headder__background">
 
-      </div>
+      <nav class="nav-bar">
+        <ul class="site">
+          <li><a href="#">Ofertas</a></li>
+          <li><a href="#">Tiendas Oficiales</a></li>
+          <li><a href="#">Vender</a></li>
+          <li><a href="#">Ayuda</a></li>
+        </ul>
+        <ul class="login">
+          <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+          <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+          <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
+        </ul>
+        <div class="burger-menu">
+          <i class="fas fa-bars icon-burger"></i>
+        </div>
+    </div>
+    <div class="headder__background">
+
+    </div>
     </nav>
   </header>
-  <main>
-    <section>
-      <h3 class="seccion__nombre">Basado en tu última visita</h3>
-      <article>
+  <main class="container">
+    <h3 class="seccion__nombre">Basado en tu última visita</h3>
+    <section class="section-visita">
+
+      <article class="producto">
         <figure>
           <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$6.7070</p>
-          <p class="producto__descuento">40% OFF</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$6.7070</p>
+            <p class="producto__descuento">40% OFF</p>
+          </div>
           <p class="producto__nombre">Cafetera Moulinex</p>
         </div>
       </article>
-      <article>
+      <article class="producto">
         <figure>
           <img src="/images/img-macbook-pro-2019.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$230.000</p>
-          <p class="producto__descuento">20% off</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$230.000</p>
+            <p class="producto__descuento">20% off</p>
+          </div>
           <p class="producto__nombre">MacBook Pro 2019</p>
         </div>
       </article>
-      <article>
+      <article class="producto">
         <figure>
           <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$70.500</p>
-          <p class="producto__descuento">10% OFF</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$70.500</p>
+            <p class="producto__descuento">10% OFF</p>
+          </div>
           <p class="producto__nombre">Samsung Galaxy S10</p>
         </div>
       </article>
-      <article>
+      <article class="producto">
         <figure>
           <img src="/images/img-tv-samsung-smart.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$23.200</p>
-          <p class="producto__descuento">5% off</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$23.200</p>
+            <p class="producto__descuento">5% off</p>
+          </div>
           <p class="producto__nombre">SmartTv Samsung 43"</p>
         </div>
       </article>
     </section>
-    <section>
-      <h3 class="seccion__nombre">Ofertas</h3>
-      <article>
+    <h3 class="seccion__nombre">Ofertas</h3>
+    <section class="section-oferta">
+
+      <article class="producto">
         <figure>
           <img src="/images/img-cafetera-moulinex.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$6.770</p>
-          <p class="producto__descuento">40% off</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$6.770</p>
+            <p class="producto__descuento">40% off</p>
+          </div>
           <p class="producto__nombre">Cafetera Moulinex</p>
         </div>
       </article>
-      <article>
+      <article class="producto">
         <figure>
           <img src="/images/img-macbook-pro-2019.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$230.000</p>
-          <p class="producto__descuento">20% off</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$230.000</p>
+            <p class="producto__descuento">20% off</p>
+          </div>
           <p class="producto__nombre">MacBook Pro 2019</p>
         </div>
       </article>
-      <article>
+      <article class="producto">
         <figure>
           <img src="/images/img-samsung-galaxy-s10.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$70.500</p>
-          <p class="producto__descuento">10% off</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$70.500</p>
+            <p class="producto__descuento">10% off</p>
+          </div>
           <p class="producto__nombre">Samsung Galaxy S10</p>
         </div>
       </article>
 
-      <article>
+      <article class="producto">
         <figure>
           <img src="/images/img-tv-samsung-smart.jpg" alt="">
         </figure>
-        <div class="producto__descripcion">
-          <i class="fas fa-truck"></i>
-          <p class="producto__precio">$23.200</p>
-          <p class="producto__descuento">5% off</p>
+        <div class="producto__descripcion product-desc-box">
+          <i class="fas fa-truck product-delivery-icon"></i>
+          <div>
+            <p class="producto__precio">$23.200</p>
+            <p class="producto__descuento">5% off</p>
+          </div>
           <p class="producto__nombre">SmartTv Samsung 43"</p>
         </div>
       </article>
