--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,14 +42,16 @@ a {
   color: #000;
 }
 
+
+
 img {
   max-width: 100%;
 }
 
 .container {
-  margin: auto;
+  margin: 0 auto;
   width: 90%;
-  padding-top: 5%;
+  padding-top: 1%;
 }
 
 main section article {
@@ -82,19 +84,23 @@ main section article {
   border: none;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
+  font-size: 17px;
   padding: 5px;
   width: 10%;
 }
 
 .icono,
 .form-buscar {
-  width: 50%;
+  width: 48%;
+  padding: 15px 0;
 }
 
 .form-buscar input {
   border: none;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
+  font-size: 17px;
+  padding: 10px;
   width: 90%;
 }
 
@@ -187,6 +193,112 @@ main section article {
   margin-top: 10px;
 }
 
+/* -----FORMULARIO------- */
+
+.form-register {
+  width: min(90%, 500px);
+  font-size: 17px;
+  text-align: center;
+  margin: 30px auto;
+}
+
+.form-register fieldset {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 1px solid var(--azul);
+  padding: 20px;
+  gap: 20px;
+}
+
+.data {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+.data label,
+.data input {
+  width: 50%;
+}
+
+.data-radio {
+  display: flex;
+  justify-content: center;
+  gap: 10px
+}
+
+.parrafo-form {
+  text-align: start;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.input-form {
+  font-size: 15px;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  outline: transparent;
+
+}
+
+
+
+.input-form:focus-within {
+  border: 2px solid var(--verde);
+}
+
+.campo-info {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.campo-info label {
+  font-size: 15px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.campo-info input {
+  height: 25px;
+  padding: 5px;
+}
+
+.intereses {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+
+.btn {
+
+  padding: 10px;
+  border: none;
+  font-size: 20px;
+  color: #fff;
+  background-color: var(--azul);
+  transition: .5s all;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: var(--verde);
+}
+
+.borrar:hover {
+  background-color: red;
+}
+
+fieldset:hover {
+  border: 1px solid var(--verde);
+}
+
+/* --------FOOTER--------- */
 .footer {
   text-align: center;
 }
@@ -239,11 +351,14 @@ main section article {
   }
 
   .icono,
-  .form-busca,
+  .form-buscar,
   .container-head p {
     align-self: center;
-    width: 33%;
+    width: 30%;
+  }
 
+  .container-head p {
+    text-align: right;
   }
 
   .nav-bar {
