--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,9 @@
     <div class="container">
       <div class="container-head">
         <figure class="icono">
-          <img src="/images/logo-mercado-liebre.svg" alt="mercado liebre">
+          <a href="/">
+            <img src="/images/logo-mercado-liebre.svg" alt="mercado liebre">
+          </a>
         </figure>
         <form class="form-buscar" action="">
           <input type="text">
@@ -32,19 +34,22 @@
           <li><a href="#">Ayuda</a></li>
         </ul>
         <ul class="login">
-          <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-          <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+          <li><a href="/crear-cuenta">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+          <li><a href="/iniciar-sesion">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
           <li><a href="#">Mis Compras <i class="fas fa-shopping-basket"></i></a></li>
         </ul>
         <div class="burger-menu">
           <i class="fas fa-bars icon-burger"></i>
         </div>
     </div>
+
+    </nav>
+  </header>
+  <section>
     <div class="headder__background">
 
     </div>
-    </nav>
-  </header>
+  </section>
   <main class="container">
     <h3 class="seccion__nombre">Basado en tu última visita</h3>
     <section class="section-visita">
