--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,9 +84,10 @@ main section article {
   border: none;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
-  font-size: 17px;
+  font-size: 15px;
   padding: 5px;
-  width: 10%;
+  width: 15%;
+  text-align: center;
 }
 
 .icono,
@@ -101,7 +102,7 @@ main section article {
   border-bottom-left-radius: 3px;
   font-size: 17px;
   padding: 10px;
-  width: 90%;
+  width: 85%;
 }
 
 .headder__background {
